syntax = "proto3";

package checkout;

import "google/protobuf/empty.proto";
option go_package = "route256/checkout;checkout_service";

service Checkout {
  rpc AddToCart(AddToCartRequest) returns (google.protobuf.Empty);
  rpc DeleteFromCart(DeleteFromCartRequest) returns (google.protobuf.Empty);
  rpc ListCart(ListCartRequest) returns (ListCartResponse);
  rpc Purchase(PurchaseRequest) returns (PurchaseResponse);
}

message AddToCartRequest {
  int64 user = 1;
  uint32 sku = 2;
  uint32 count = 3;
}

message DeleteFromCartRequest {
  int64 user = 1;
  uint32 sku = 2;
  uint32 count = 3;
}

message ListCartRequest {
  int64 user = 1;
}

message CartItem {
  uint32 sku = 1;
  uint32 count = 2;
  string name = 3;
  uint32 price = 4;
}

message ListCartResponse {
  uint32 totalPrice = 1;
  repeated CartItem items = 2;
}

message PurchaseRequest {
  int64 user = 1;
}

message PurchaseResponse {
  int64 orderID = 1;
}